docs/envoy/v1.10.0/_sources/api-v2/api/v2/cds.proto.rst.txt
.. _envoy_api_file_envoy/api/v2/cds.proto:

Clusters
========


.. _envoy_api_msg_Cluster:

Cluster
-------

`[Cluster proto] <https://github.com/envoyproxy/envoy/blob/v1.10.0/api/envoy/api/v2/cds.proto#L54>`_

Configuration for a single upstream cluster.

.. code-block:: json

  {
    "name": "...",
    "alt_stat_name": "...",
    "type": "...",
    "cluster_type": "{...}",
    "eds_cluster_config": "{...}",
    "connect_timeout": "{...}",
    "per_connection_buffer_limit_bytes": "{...}",
    "lb_policy": "...",
    "hosts": [],
    "load_assignment": "{...}",
    "health_checks": [],
    "max_requests_per_connection": "{...}",
    "circuit_breakers": "{...}",
    "tls_context": "{...}",
    "common_http_protocol_options": "{...}",
    "http_protocol_options": "{...}",
    "http2_protocol_options": "{...}",
    "extension_protocol_options": "{...}",
    "typed_extension_protocol_options": "{...}",
    "dns_refresh_rate": "{...}",
    "dns_lookup_family": "...",
    "dns_resolvers": [],
    "outlier_detection": "{...}",
    "cleanup_interval": "{...}",
    "upstream_bind_config": "{...}",
    "lb_subset_config": "{...}",
    "ring_hash_lb_config": "{...}",
    "original_dst_lb_config": "{...}",
    "least_request_lb_config": "{...}",
    "common_lb_config": "{...}",
    "transport_socket": "{...}",
    "metadata": "{...}",
    "protocol_selection": "...",
    "upstream_connection_options": "{...}",
    "close_connections_on_host_health_failure": "...",
    "drain_connections_on_host_removal": "..."
  }

.. _envoy_api_field_Cluster.name:

name
  (`string <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_, *REQUIRED*) Supplies the name of the cluster which must be unique across all clusters.
  The cluster name is used when emitting
  :ref:`statistics <config_cluster_manager_cluster_stats>` if :ref:`alt_stat_name
  <envoy_api_field_Cluster.alt_stat_name>` is not provided.
  Any ``:`` in the cluster name will be converted to ``_`` when emitting statistics.
  By default, the maximum length of a cluster name is limited to 60
  characters. This limit can be increased by setting the
  :option:`--max-obj-name-len` command line argument to the desired value.
  
  
.. _envoy_api_field_Cluster.alt_stat_name:

alt_stat_name
  (`string <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) An optional alternative to the cluster name to be used while emitting stats.
  Any ``:`` in the name will be converted to ``_`` when emitting statistics. This should not be
  confused with :ref:`Router Filter Header
  <config_http_filters_router_x-envoy-upstream-alt-stat-name>`.
  
  
.. _envoy_api_field_Cluster.type:

type
  (:ref:`Cluster.DiscoveryType <envoy_api_enum_Cluster.DiscoveryType>`) The :ref:`service discovery type <arch_overview_service_discovery_types>`
  to use for resolving the cluster.
  
  
  
  Only one of :ref:`type <envoy_api_field_Cluster.type>`, :ref:`cluster_type <envoy_api_field_Cluster.cluster_type>` may be set.
  
.. _envoy_api_field_Cluster.cluster_type:

cluster_type
  (:ref:`Cluster.CustomClusterType <envoy_api_msg_Cluster.CustomClusterType>`) The custom cluster type.
  
  
  
  Only one of :ref:`type <envoy_api_field_Cluster.type>`, :ref:`cluster_type <envoy_api_field_Cluster.cluster_type>` may be set.
  
.. _envoy_api_field_Cluster.eds_cluster_config:

eds_cluster_config
  (:ref:`Cluster.EdsClusterConfig <envoy_api_msg_Cluster.EdsClusterConfig>`) Configuration to use for EDS updates for the Cluster.
  
  
.. _envoy_api_field_Cluster.connect_timeout:

connect_timeout
  (`Duration <https://developers.google.com/protocol-buffers/docs/reference/google.protobuf#duration>`_) The timeout for new network connections to hosts in the cluster.
  
  
.. _envoy_api_field_Cluster.per_connection_buffer_limit_bytes:

per_connection_buffer_limit_bytes
  (`UInt32Value <https://developers.google.com/protocol-buffers/docs/reference/google.protobuf#uint32value>`_) Soft limit on size of the cluster’s connections read and write buffers. If
  unspecified, an implementation defined default is applied (1MiB).
  
  
.. _envoy_api_field_Cluster.lb_policy:

lb_policy
  (:ref:`Cluster.LbPolicy <envoy_api_enum_Cluster.LbPolicy>`) The :ref:`load balancer type <arch_overview_load_balancing_types>` to use
  when picking a host in the cluster.
  
  
.. _envoy_api_field_Cluster.hosts:

hosts
  (:ref:`core.Address <envoy_api_msg_core.Address>`) If the service discovery type is
  :ref:`STATIC<envoy_api_enum_value_Cluster.DiscoveryType.STATIC>`,
  :ref:`STRICT_DNS<envoy_api_enum_value_Cluster.DiscoveryType.STRICT_DNS>`
  or :ref:`LOGICAL_DNS<envoy_api_enum_value_Cluster.DiscoveryType.LOGICAL_DNS>`,
  then hosts is required.
  
  .. attention::
  
    **This field is deprecated**. Set the
    :ref:`load_assignment<envoy_api_field_Cluster.load_assignment>` field instead.
  
  
  
.. _envoy_api_field_Cluster.load_assignment:

load_assignment
  (:ref:`ClusterLoadAssignment <envoy_api_msg_ClusterLoadAssignment>`) Setting this is required for specifying members of
  :ref:`STATIC<envoy_api_enum_value_Cluster.DiscoveryType.STATIC>`,
  :ref:`STRICT_DNS<envoy_api_enum_value_Cluster.DiscoveryType.STRICT_DNS>`
  or :ref:`LOGICAL_DNS<envoy_api_enum_value_Cluster.DiscoveryType.LOGICAL_DNS>` clusters.
  This field supersedes :ref:`hosts<envoy_api_field_Cluster.hosts>` field.
  
  .. attention::
  
    Setting this allows non-EDS cluster types to contain embedded EDS equivalent
    :ref:`endpoint assignments<envoy_api_msg_ClusterLoadAssignment>`.
    Setting this overrides :ref:`hosts<envoy_api_field_Cluster.hosts>` values.
  
  
  
.. _envoy_api_field_Cluster.health_checks:

health_checks
  (:ref:`core.HealthCheck <envoy_api_msg_core.HealthCheck>`) Optional :ref:`active health checking <arch_overview_health_checking>`
  configuration for the cluster. If no
  configuration is specified no health checking will be done and all cluster
  members will be considered healthy at all times.
  
  
.. _envoy_api_field_Cluster.max_requests_per_connection:

max_requests_per_connection
  (`UInt32Value <https://developers.google.com/protocol-buffers/docs/reference/google.protobuf#uint32value>`_) Optional maximum requests for a single upstream connection. This parameter
  is respected by both the HTTP/1.1 and HTTP/2 connection pool
  implementations. If not specified, there is no limit. Setting this
  parameter to 1 will effectively disable keep alive.
  
  
.. _envoy_api_field_Cluster.circuit_breakers:

circuit_breakers
  (:ref:`cluster.CircuitBreakers <envoy_api_msg_cluster.CircuitBreakers>`) Optional :ref:`circuit breaking <arch_overview_circuit_break>` for the cluster.
  
  
.. _envoy_api_field_Cluster.tls_context:

tls_context
  (:ref:`auth.UpstreamTlsContext <envoy_api_msg_auth.UpstreamTlsContext>`) The TLS configuration for connections to the upstream cluster. If no TLS
  configuration is specified, TLS will not be used for new connections.
  
  .. attention::
  
    Server certificate verification is not enabled by default. Configure
    :ref:`trusted_ca<envoy_api_field_auth.CertificateValidationContext.trusted_ca>` to enable
    verification.
  
  
.. _envoy_api_field_Cluster.common_http_protocol_options:

common_http_protocol_options
  (:ref:`core.HttpProtocolOptions <envoy_api_msg_core.HttpProtocolOptions>`) Additional options when handling HTTP requests. These options will be applicable to both
  HTTP1 and HTTP2 requests.
  
  
.. _envoy_api_field_Cluster.http_protocol_options:

http_protocol_options
  (:ref:`core.Http1ProtocolOptions <envoy_api_msg_core.Http1ProtocolOptions>`) Additional options when handling HTTP1 requests.
  
  
.. _envoy_api_field_Cluster.http2_protocol_options:

http2_protocol_options
  (:ref:`core.Http2ProtocolOptions <envoy_api_msg_core.Http2ProtocolOptions>`) Even if default HTTP2 protocol options are desired, this field must be
  set so that Envoy will assume that the upstream supports HTTP/2 when
  making new HTTP connection pool connections. Currently, Envoy only
  supports prior knowledge for upstream connections. Even if TLS is used
  with ALPN, `http2_protocol_options` must be specified. As an aside this allows HTTP/2
  connections to happen over plain text.
  
  
.. _envoy_api_field_Cluster.extension_protocol_options:

extension_protocol_options
  (map<`string <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_, `Struct <https://developers.google.com/protocol-buffers/docs/reference/google.protobuf#struct>`_>) The extension_protocol_options field is used to provide extension-specific protocol options
  for upstream connections. The key should match the extension filter name, such as
  "envoy.filters.network.thrift_proxy". See the extension's documentation for details on
  specific options.
  
  
.. _envoy_api_field_Cluster.typed_extension_protocol_options:

typed_extension_protocol_options
  (map<`string <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_, `Any <https://developers.google.com/protocol-buffers/docs/reference/google.protobuf#any>`_>) The extension_protocol_options field is used to provide extension-specific protocol options
  for upstream connections. The key should match the extension filter name, such as
  "envoy.filters.network.thrift_proxy". See the extension's documentation for details on
  specific options.
  
  
.. _envoy_api_field_Cluster.dns_refresh_rate:

dns_refresh_rate
  (`Duration <https://developers.google.com/protocol-buffers/docs/reference/google.protobuf#duration>`_) If the DNS refresh rate is specified and the cluster type is either
  :ref:`STRICT_DNS<envoy_api_enum_value_Cluster.DiscoveryType.STRICT_DNS>`,
  or :ref:`LOGICAL_DNS<envoy_api_enum_value_Cluster.DiscoveryType.LOGICAL_DNS>`,
  this value is used as the cluster’s DNS refresh
  rate. If this setting is not specified, the value defaults to 5000ms. For
  cluster types other than
  :ref:`STRICT_DNS<envoy_api_enum_value_Cluster.DiscoveryType.STRICT_DNS>`
  and :ref:`LOGICAL_DNS<envoy_api_enum_value_Cluster.DiscoveryType.LOGICAL_DNS>`
  this setting is ignored.
  
  
.. _envoy_api_field_Cluster.dns_lookup_family:

dns_lookup_family
  (:ref:`Cluster.DnsLookupFamily <envoy_api_enum_Cluster.DnsLookupFamily>`) The DNS IP address resolution policy. If this setting is not specified, the
  value defaults to
  :ref:`AUTO<envoy_api_enum_value_Cluster.DnsLookupFamily.AUTO>`.
  
  
.. _envoy_api_field_Cluster.dns_resolvers:

dns_resolvers
  (:ref:`core.Address <envoy_api_msg_core.Address>`) If DNS resolvers are specified and the cluster type is either
  :ref:`STRICT_DNS<envoy_api_enum_value_Cluster.DiscoveryType.STRICT_DNS>`,
  or :ref:`LOGICAL_DNS<envoy_api_enum_value_Cluster.DiscoveryType.LOGICAL_DNS>`,
  this value is used to specify the cluster’s dns resolvers.
  If this setting is not specified, the value defaults to the default
  resolver, which uses /etc/resolv.conf for configuration. For cluster types
  other than
  :ref:`STRICT_DNS<envoy_api_enum_value_Cluster.DiscoveryType.STRICT_DNS>`
  and :ref:`LOGICAL_DNS<envoy_api_enum_value_Cluster.DiscoveryType.LOGICAL_DNS>`
  this setting is ignored.
  
  
.. _envoy_api_field_Cluster.outlier_detection:

outlier_detection
  (:ref:`cluster.OutlierDetection <envoy_api_msg_cluster.OutlierDetection>`) If specified, outlier detection will be enabled for this upstream cluster.
  Each of the configuration values can be overridden via
  :ref:`runtime values <config_cluster_manager_cluster_runtime_outlier_detection>`.
  
  
.. _envoy_api_field_Cluster.cleanup_interval:

cleanup_interval
  (`Duration <https://developers.google.com/protocol-buffers/docs/reference/google.protobuf#duration>`_) The interval for removing stale hosts from a cluster type
  :ref:`ORIGINAL_DST<envoy_api_enum_value_Cluster.DiscoveryType.ORIGINAL_DST>`.
  Hosts are considered stale if they have not been used
  as upstream destinations during this interval. New hosts are added
  to original destination clusters on demand as new connections are
  redirected to Envoy, causing the number of hosts in the cluster to
  grow over time. Hosts that are not stale (they are actively used as
  destinations) are kept in the cluster, which allows connections to
  them remain open, saving the latency that would otherwise be spent
  on opening new connections. If this setting is not specified, the
  value defaults to 5000ms. For cluster types other than
  :ref:`ORIGINAL_DST<envoy_api_enum_value_Cluster.DiscoveryType.ORIGINAL_DST>`
  this setting is ignored.
  
  
.. _envoy_api_field_Cluster.upstream_bind_config:

upstream_bind_config
  (:ref:`core.BindConfig <envoy_api_msg_core.BindConfig>`) Optional configuration used to bind newly established upstream connections.
  This overrides any bind_config specified in the bootstrap proto.
  If the address and port are empty, no bind will be performed.
  
  
.. _envoy_api_field_Cluster.lb_subset_config:

lb_subset_config
  (:ref:`Cluster.LbSubsetConfig <envoy_api_msg_Cluster.LbSubsetConfig>`) Configuration for load balancing subsetting.
  
  
.. _envoy_api_field_Cluster.ring_hash_lb_config:

ring_hash_lb_config
  (:ref:`Cluster.RingHashLbConfig <envoy_api_msg_Cluster.RingHashLbConfig>`) Optional configuration for the Ring Hash load balancing policy.
  
  Optional configuration for the load balancing algorithm selected by
  LbPolicy. Currently only
  :ref:`RING_HASH<envoy_api_enum_value_Cluster.LbPolicy.RING_HASH>` and
  :ref:`LEAST_REQUEST<envoy_api_enum_value_Cluster.LbPolicy.LEAST_REQUEST>`
  has additional configuration options.
  Specifying ring_hash_lb_config or least_request_lb_config without setting the corresponding
  LbPolicy will generate an error at runtime.
  
  
  Only one of :ref:`ring_hash_lb_config <envoy_api_field_Cluster.ring_hash_lb_config>`, :ref:`original_dst_lb_config <envoy_api_field_Cluster.original_dst_lb_config>`, :ref:`least_request_lb_config <envoy_api_field_Cluster.least_request_lb_config>` may be set.
  
.. _envoy_api_field_Cluster.original_dst_lb_config:

original_dst_lb_config
  (:ref:`Cluster.OriginalDstLbConfig <envoy_api_msg_Cluster.OriginalDstLbConfig>`) Optional configuration for the Original Destination load balancing policy.
  
  Optional configuration for the load balancing algorithm selected by
  LbPolicy. Currently only
  :ref:`RING_HASH<envoy_api_enum_value_Cluster.LbPolicy.RING_HASH>` and
  :ref:`LEAST_REQUEST<envoy_api_enum_value_Cluster.LbPolicy.LEAST_REQUEST>`
  has additional configuration options.
  Specifying ring_hash_lb_config or least_request_lb_config without setting the corresponding
  LbPolicy will generate an error at runtime.
  
  
  Only one of :ref:`ring_hash_lb_config <envoy_api_field_Cluster.ring_hash_lb_config>`, :ref:`original_dst_lb_config <envoy_api_field_Cluster.original_dst_lb_config>`, :ref:`least_request_lb_config <envoy_api_field_Cluster.least_request_lb_config>` may be set.
  
.. _envoy_api_field_Cluster.least_request_lb_config:

least_request_lb_config
  (:ref:`Cluster.LeastRequestLbConfig <envoy_api_msg_Cluster.LeastRequestLbConfig>`) Optional configuration for the LeastRequest load balancing policy.
  
  Optional configuration for the load balancing algorithm selected by
  LbPolicy. Currently only
  :ref:`RING_HASH<envoy_api_enum_value_Cluster.LbPolicy.RING_HASH>` and
  :ref:`LEAST_REQUEST<envoy_api_enum_value_Cluster.LbPolicy.LEAST_REQUEST>`
  has additional configuration options.
  Specifying ring_hash_lb_config or least_request_lb_config without setting the corresponding
  LbPolicy will generate an error at runtime.
  
  
  Only one of :ref:`ring_hash_lb_config <envoy_api_field_Cluster.ring_hash_lb_config>`, :ref:`original_dst_lb_config <envoy_api_field_Cluster.original_dst_lb_config>`, :ref:`least_request_lb_config <envoy_api_field_Cluster.least_request_lb_config>` may be set.
  
.. _envoy_api_field_Cluster.common_lb_config:

common_lb_config
  (:ref:`Cluster.CommonLbConfig <envoy_api_msg_Cluster.CommonLbConfig>`) Common configuration for all load balancer implementations.
  
  
.. _envoy_api_field_Cluster.transport_socket:

transport_socket
  (:ref:`core.TransportSocket <envoy_api_msg_core.TransportSocket>`) Optional custom transport socket implementation to use for upstream connections.
  
  
.. _envoy_api_field_Cluster.metadata:

metadata
  (:ref:`core.Metadata <envoy_api_msg_core.Metadata>`) The Metadata field can be used to provide additional information about the
  cluster. It can be used for stats, logging, and varying filter behavior.
  Fields should use reverse DNS notation to denote which entity within Envoy
  will need the information. For instance, if the metadata is intended for
  the Router filter, the filter name should be specified as *envoy.router*.
  
  
.. _envoy_api_field_Cluster.protocol_selection:

protocol_selection
  (:ref:`Cluster.ClusterProtocolSelection <envoy_api_enum_Cluster.ClusterProtocolSelection>`) Determines how Envoy selects the protocol used to speak to upstream hosts.
  
  
.. _envoy_api_field_Cluster.upstream_connection_options:

upstream_connection_options
  (:ref:`UpstreamConnectionOptions <envoy_api_msg_UpstreamConnectionOptions>`) Optional options for upstream connections.
  
  
.. _envoy_api_field_Cluster.close_connections_on_host_health_failure:

close_connections_on_host_health_failure
  (`bool <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) If an upstream host becomes unhealthy (as determined by the configured health checks
  or outlier detection), immediately close all connections to the failed host.
  
  .. note::
  
    This is currently only supported for connections created by tcp_proxy.
  
  .. note::
  
    The current implementation of this feature closes all connections immediately when
    the unhealthy status is detected. If there are a large number of connections open
    to an upstream host that becomes unhealthy, Envoy may spend a substantial amount of
    time exclusively closing these connections, and not processing any other traffic.
  
  
.. _envoy_api_field_Cluster.drain_connections_on_host_removal:

drain_connections_on_host_removal
  (`bool <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) If this cluster uses EDS or STRICT_DNS to configure its hosts, immediately drain
  connections from any hosts that are removed from service discovery.
  
  This only affects behavior for hosts that are being actively health checked.
  If this flag is not set to true, Envoy will wait until the hosts fail active health
  checking before removing it from the cluster.
  
  
.. _envoy_api_msg_Cluster.CustomClusterType:

Cluster.CustomClusterType
-------------------------

`[Cluster.CustomClusterType proto] <https://github.com/envoyproxy/envoy/blob/v1.10.0/api/envoy/api/v2/cds.proto#L99>`_

Extended cluster type.

.. code-block:: json

  {
    "name": "...",
    "typed_config": "{...}"
  }

.. _envoy_api_field_Cluster.CustomClusterType.name:

name
  (`string <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_, *REQUIRED*) The type of the cluster to instantiate. The name must match a supported cluster type.
  
  
.. _envoy_api_field_Cluster.CustomClusterType.typed_config:

typed_config
  (`Any <https://developers.google.com/protocol-buffers/docs/reference/google.protobuf#any>`_) Cluster specific configuration which depends on the cluster being instantiated.
  See the supported cluster for further documentation.
  
  


.. _envoy_api_msg_Cluster.EdsClusterConfig:

Cluster.EdsClusterConfig
------------------------

`[Cluster.EdsClusterConfig proto] <https://github.com/envoyproxy/envoy/blob/v1.10.0/api/envoy/api/v2/cds.proto#L118>`_

Only valid when discovery type is EDS.

.. code-block:: json

  {
    "eds_config": "{...}",
    "service_name": "..."
  }

.. _envoy_api_field_Cluster.EdsClusterConfig.eds_config:

eds_config
  (:ref:`core.ConfigSource <envoy_api_msg_core.ConfigSource>`) Configuration for the source of EDS updates for this Cluster.
  
  
.. _envoy_api_field_Cluster.EdsClusterConfig.service_name:

service_name
  (`string <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) Optional alternative to cluster name to present to EDS. This does not
  have the same restrictions as cluster name, i.e. it may be arbitrary
  length.
  
  




.. _envoy_api_msg_Cluster.LbSubsetConfig:

Cluster.LbSubsetConfig
----------------------

`[Cluster.LbSubsetConfig proto] <https://github.com/envoyproxy/envoy/blob/v1.10.0/api/envoy/api/v2/cds.proto#L336>`_

Optionally divide the endpoints in this cluster into subsets defined by
endpoint metadata and selected by route and weighted cluster metadata.

.. code-block:: json

  {
    "fallback_policy": "...",
    "default_subset": "{...}",
    "subset_selectors": [],
    "locality_weight_aware": "...",
    "scale_locality_weight": "...",
    "panic_mode_any": "..."
  }

.. _envoy_api_field_Cluster.LbSubsetConfig.fallback_policy:

fallback_policy
  (:ref:`Cluster.LbSubsetConfig.LbSubsetFallbackPolicy <envoy_api_enum_Cluster.LbSubsetConfig.LbSubsetFallbackPolicy>`) The behavior used when no endpoint subset matches the selected route's
  metadata. The value defaults to
  :ref:`NO_FALLBACK<envoy_api_enum_value_Cluster.LbSubsetConfig.LbSubsetFallbackPolicy.NO_FALLBACK>`.
  
  
.. _envoy_api_field_Cluster.LbSubsetConfig.default_subset:

default_subset
  (`Struct <https://developers.google.com/protocol-buffers/docs/reference/google.protobuf#struct>`_) Specifies the default subset of endpoints used during fallback if
  fallback_policy is
  :ref:`DEFAULT_SUBSET<envoy_api_enum_value_Cluster.LbSubsetConfig.LbSubsetFallbackPolicy.DEFAULT_SUBSET>`.
  Each field in default_subset is
  compared to the matching LbEndpoint.Metadata under the *envoy.lb*
  namespace. It is valid for no hosts to match, in which case the behavior
  is the same as a fallback_policy of
  :ref:`NO_FALLBACK<envoy_api_enum_value_Cluster.LbSubsetConfig.LbSubsetFallbackPolicy.NO_FALLBACK>`.
  
  
.. _envoy_api_field_Cluster.LbSubsetConfig.subset_selectors:

subset_selectors
  (:ref:`Cluster.LbSubsetConfig.LbSubsetSelector <envoy_api_msg_Cluster.LbSubsetConfig.LbSubsetSelector>`) For each entry, LbEndpoint.Metadata's
  *envoy.lb* namespace is traversed and a subset is created for each unique
  combination of key and value. For example:
  
  .. code-block:: json
  
    { "subset_selectors": [
        { "keys": [ "version" ] },
        { "keys": [ "stage", "hardware_type" ] }
    ]}
  
  A subset is matched when the metadata from the selected route and
  weighted cluster contains the same keys and values as the subset's
  metadata. The same host may appear in multiple subsets.
  
  
.. _envoy_api_field_Cluster.LbSubsetConfig.locality_weight_aware:

locality_weight_aware
  (`bool <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) If true, routing to subsets will take into account the localities and locality weights of the
  endpoints when making the routing decision.
  
  There are some potential pitfalls associated with enabling this feature, as the resulting
  traffic split after applying both a subset match and locality weights might be undesirable.
  
  Consider for example a situation in which you have 50/50 split across two localities X/Y
  which have 100 hosts each without subsetting. If the subset LB results in X having only 1
  host selected but Y having 100, then a lot more load is being dumped on the single host in X
  than originally anticipated in the load balancing assignment delivered via EDS.
  
  
.. _envoy_api_field_Cluster.LbSubsetConfig.scale_locality_weight:

scale_locality_weight
  (`bool <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) When used with locality_weight_aware, scales the weight of each locality by the ratio
  of hosts in the subset vs hosts in the original subset. This aims to even out the load
  going to an individual locality if said locality is disproportionally affected by the
  subset predicate.
  
  
.. _envoy_api_field_Cluster.LbSubsetConfig.panic_mode_any:

panic_mode_any
  (`bool <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) If true, when a fallback policy is configured and its corresponding subset fails to find
  a host this will cause any host to be selected instead.
  
  This is useful when using the default subset as the fallback policy, given the default
  subset might become empty. With this option enabled, if that happens the LB will attempt
  to select a host from the entire cluster.
  
  
.. _envoy_api_msg_Cluster.LbSubsetConfig.LbSubsetSelector:

Cluster.LbSubsetConfig.LbSubsetSelector
---------------------------------------

`[Cluster.LbSubsetConfig.LbSubsetSelector proto] <https://github.com/envoyproxy/envoy/blob/v1.10.0/api/envoy/api/v2/cds.proto#L365>`_

Specifications for subsets.

.. code-block:: json

  {
    "keys": []
  }

.. _envoy_api_field_Cluster.LbSubsetConfig.LbSubsetSelector.keys:

keys
  (`string <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) List of keys to match with the weighted cluster metadata.
  
  


.. _envoy_api_enum_Cluster.LbSubsetConfig.LbSubsetFallbackPolicy:

Enum Cluster.LbSubsetConfig.LbSubsetFallbackPolicy
--------------------------------------------------

`[Cluster.LbSubsetConfig.LbSubsetFallbackPolicy proto] <https://github.com/envoyproxy/envoy/blob/v1.10.0/api/envoy/api/v2/cds.proto#L343>`_

If NO_FALLBACK is selected, a result
equivalent to no healthy hosts is reported. If ANY_ENDPOINT is selected,
any cluster endpoint may be returned (subject to policy, health checks,
etc). If DEFAULT_SUBSET is selected, load balancing is performed over the
endpoints matching the values from the default_subset field.

.. _envoy_api_enum_value_Cluster.LbSubsetConfig.LbSubsetFallbackPolicy.NO_FALLBACK:

NO_FALLBACK
  *(DEFAULT)* ⁣
  
.. _envoy_api_enum_value_Cluster.LbSubsetConfig.LbSubsetFallbackPolicy.ANY_ENDPOINT:

ANY_ENDPOINT
  ⁣
  
.. _envoy_api_enum_value_Cluster.LbSubsetConfig.LbSubsetFallbackPolicy.DEFAULT_SUBSET:

DEFAULT_SUBSET
  ⁣
  

.. _envoy_api_msg_Cluster.LeastRequestLbConfig:

Cluster.LeastRequestLbConfig
----------------------------

`[Cluster.LeastRequestLbConfig proto] <https://github.com/envoyproxy/envoy/blob/v1.10.0/api/envoy/api/v2/cds.proto#L417>`_

Specific configuration for the LeastRequest load balancing policy.

.. code-block:: json

  {
    "choice_count": "{...}"
  }

.. _envoy_api_field_Cluster.LeastRequestLbConfig.choice_count:

choice_count
  (`UInt32Value <https://developers.google.com/protocol-buffers/docs/reference/google.protobuf#uint32value>`_) The number of random healthy hosts from which the host with the fewest active requests will
  be chosen. Defaults to 2 so that we perform two-choice selection if the field is not set.
  
  


.. _envoy_api_msg_Cluster.RingHashLbConfig:

Cluster.RingHashLbConfig
------------------------

`[Cluster.RingHashLbConfig proto] <https://github.com/envoyproxy/envoy/blob/v1.10.0/api/envoy/api/v2/cds.proto#L425>`_

Specific configuration for the :ref:`RingHash<arch_overview_load_balancing_types_ring_hash>`
load balancing policy.

.. code-block:: json

  {
    "minimum_ring_size": "{...}",
    "hash_function": "...",
    "maximum_ring_size": "{...}"
  }

.. _envoy_api_field_Cluster.RingHashLbConfig.minimum_ring_size:

minimum_ring_size
  (`UInt64Value <https://developers.google.com/protocol-buffers/docs/reference/google.protobuf#uint64value>`_) Minimum hash ring size. The larger the ring is (that is, the more hashes there are for each
  provided host) the better the request distribution will reflect the desired weights. Defaults
  to 1024 entries, and limited to 8M entries. See also
  :ref:`maximum_ring_size<envoy_api_field_Cluster.RingHashLbConfig.maximum_ring_size>`.
  
  
.. _envoy_api_field_Cluster.RingHashLbConfig.hash_function:

hash_function
  (:ref:`Cluster.RingHashLbConfig.HashFunction <envoy_api_enum_Cluster.RingHashLbConfig.HashFunction>`) The hash function used to hash hosts onto the ketama ring. The value defaults to
  :ref:`XX_HASH<envoy_api_enum_value_Cluster.RingHashLbConfig.HashFunction.XX_HASH>`.
  
  
.. _envoy_api_field_Cluster.RingHashLbConfig.maximum_ring_size:

maximum_ring_size
  (`UInt64Value <https://developers.google.com/protocol-buffers/docs/reference/google.protobuf#uint64value>`_) Maximum hash ring size. Defaults to 8M entries, and limited to 8M entries, but can be lowered
  to further constrain resource use. See also
  :ref:`minimum_ring_size<envoy_api_field_Cluster.RingHashLbConfig.minimum_ring_size>`.
  
  

.. _envoy_api_enum_Cluster.RingHashLbConfig.HashFunction:

Enum Cluster.RingHashLbConfig.HashFunction
------------------------------------------

`[Cluster.RingHashLbConfig.HashFunction proto] <https://github.com/envoyproxy/envoy/blob/v1.10.0/api/envoy/api/v2/cds.proto#L435>`_

The hash function used to hash hosts onto the ketama ring.

.. _envoy_api_enum_value_Cluster.RingHashLbConfig.HashFunction.XX_HASH:

XX_HASH
  *(DEFAULT)* ⁣Use `xxHash <https://github.com/Cyan4973/xxHash>`_, this is the default hash function.
  
  
.. _envoy_api_enum_value_Cluster.RingHashLbConfig.HashFunction.MURMUR_HASH_2:

MURMUR_HASH_2
  ⁣Use `MurmurHash2 <https://sites.google.com/site/murmurhash/>`_, this is compatible with
  std:hash<string> in GNU libstdc++ 3.4.20 or above. This is typically the case when compiled
  on Linux and not macOS.
  
  

.. _envoy_api_msg_Cluster.OriginalDstLbConfig:

Cluster.OriginalDstLbConfig
---------------------------

`[Cluster.OriginalDstLbConfig proto] <https://github.com/envoyproxy/envoy/blob/v1.10.0/api/envoy/api/v2/cds.proto#L457>`_

Specific configuration for the
:ref:`Original Destination <arch_overview_load_balancing_types_original_destination>`
load balancing policy.

.. code-block:: json

  {
    "use_http_header": "..."
  }

.. _envoy_api_field_Cluster.OriginalDstLbConfig.use_http_header:

use_http_header
  (`bool <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) When true, :ref:`x-envoy-original-dst-host
  <config_http_conn_man_headers_x-envoy-original-dst-host>` can be used to override destination
  address.
  
  .. attention::
  
    This header isn't sanitized by default, so enabling this feature allows HTTP clients to
    route traffic to arbitrary hosts and/or ports, which may have serious security
    consequences.
  
  


.. _envoy_api_msg_Cluster.CommonLbConfig:

Cluster.CommonLbConfig
----------------------

`[Cluster.CommonLbConfig proto] <https://github.com/envoyproxy/envoy/blob/v1.10.0/api/envoy/api/v2/cds.proto#L487>`_

Common configuration for all load balancer implementations.

.. code-block:: json

  {
    "healthy_panic_threshold": "{...}",
    "zone_aware_lb_config": "{...}",
    "locality_weighted_lb_config": "{...}",
    "update_merge_window": "{...}"
  }

.. _envoy_api_field_Cluster.CommonLbConfig.healthy_panic_threshold:

healthy_panic_threshold
  (:ref:`type.Percent <envoy_api_msg_type.Percent>`) Configures the :ref:`healthy panic threshold <arch_overview_load_balancing_panic_threshold>`.
  If not specified, the default is 50%.
  
  .. note::
    The specified percent will be truncated to the nearest 1%.
  
  
.. _envoy_api_field_Cluster.CommonLbConfig.zone_aware_lb_config:

zone_aware_lb_config
  (:ref:`Cluster.CommonLbConfig.ZoneAwareLbConfig <envoy_api_msg_Cluster.CommonLbConfig.ZoneAwareLbConfig>`) 
  
  
  Only one of :ref:`zone_aware_lb_config <envoy_api_field_Cluster.CommonLbConfig.zone_aware_lb_config>`, :ref:`locality_weighted_lb_config <envoy_api_field_Cluster.CommonLbConfig.locality_weighted_lb_config>` may be set.
  
.. _envoy_api_field_Cluster.CommonLbConfig.locality_weighted_lb_config:

locality_weighted_lb_config
  (:ref:`Cluster.CommonLbConfig.LocalityWeightedLbConfig <envoy_api_msg_Cluster.CommonLbConfig.LocalityWeightedLbConfig>`) 
  
  
  Only one of :ref:`zone_aware_lb_config <envoy_api_field_Cluster.CommonLbConfig.zone_aware_lb_config>`, :ref:`locality_weighted_lb_config <envoy_api_field_Cluster.CommonLbConfig.locality_weighted_lb_config>` may be set.
  
.. _envoy_api_field_Cluster.CommonLbConfig.update_merge_window:

update_merge_window
  (`Duration <https://developers.google.com/protocol-buffers/docs/reference/google.protobuf#duration>`_) If set, all health check/weight/metadata updates that happen within this duration will be
  merged and delivered in one shot when the duration expires. The start of the duration is when
  the first update happens. This is useful for big clusters, with potentially noisy deploys
  that might trigger excessive CPU usage due to a constant stream of healthcheck state changes
  or metadata updates. The first set of updates to be seen apply immediately (e.g.: a new
  cluster).
  
  If this is not set, we default to a merge window of 1000ms. To disable it, set the merge
  window to 0.
  
  Note: merging does not apply to cluster membership changes (e.g.: adds/removes); this is
  because merging those updates isn't currently safe. See
  https://github.com/envoyproxy/envoy/pull/3941.
  
  
.. _envoy_api_msg_Cluster.CommonLbConfig.ZoneAwareLbConfig:

Cluster.CommonLbConfig.ZoneAwareLbConfig
----------------------------------------

`[Cluster.CommonLbConfig.ZoneAwareLbConfig proto] <https://github.com/envoyproxy/envoy/blob/v1.10.0/api/envoy/api/v2/cds.proto#L496>`_

Configuration for :ref:`zone aware routing
<arch_overview_load_balancing_zone_aware_routing>`.

.. code-block:: json

  {
    "routing_enabled": "{...}",
    "min_cluster_size": "{...}"
  }

.. _envoy_api_field_Cluster.CommonLbConfig.ZoneAwareLbConfig.routing_enabled:

routing_enabled
  (:ref:`type.Percent <envoy_api_msg_type.Percent>`) Configures percentage of requests that will be considered for zone aware routing
  if zone aware routing is configured. If not specified, the default is 100%.
  * :ref:`runtime values <config_cluster_manager_cluster_runtime_zone_routing>`.
  * :ref:`Zone aware routing support <arch_overview_load_balancing_zone_aware_routing>`.
  
  
.. _envoy_api_field_Cluster.CommonLbConfig.ZoneAwareLbConfig.min_cluster_size:

min_cluster_size
  (`UInt64Value <https://developers.google.com/protocol-buffers/docs/reference/google.protobuf#uint64value>`_) Configures minimum upstream cluster size required for zone aware routing
  If upstream cluster size is less than specified, zone aware routing is not performed
  even if zone aware routing is configured. If not specified, the default is 6.
  * :ref:`runtime values <config_cluster_manager_cluster_runtime_zone_routing>`.
  * :ref:`Zone aware routing support <arch_overview_load_balancing_zone_aware_routing>`.
  
  


.. _envoy_api_msg_Cluster.CommonLbConfig.LocalityWeightedLbConfig:

Cluster.CommonLbConfig.LocalityWeightedLbConfig
-----------------------------------------------

`[Cluster.CommonLbConfig.LocalityWeightedLbConfig proto] <https://github.com/envoyproxy/envoy/blob/v1.10.0/api/envoy/api/v2/cds.proto#L511>`_

Configuration for :ref:`locality weighted load balancing
<arch_overview_load_balancing_locality_weighted_lb>`

.. code-block:: json

  {}





.. _envoy_api_enum_Cluster.DiscoveryType:

Enum Cluster.DiscoveryType
--------------------------

`[Cluster.DiscoveryType proto] <https://github.com/envoyproxy/envoy/blob/v1.10.0/api/envoy/api/v2/cds.proto#L73>`_

Refer to :ref:`service discovery type <arch_overview_service_discovery_types>`
for an explanation on each type.

.. _envoy_api_enum_value_Cluster.DiscoveryType.STATIC:

STATIC
  *(DEFAULT)* ⁣Refer to the :ref:`static discovery type<arch_overview_service_discovery_types_static>`
  for an explanation.
  
  
.. _envoy_api_enum_value_Cluster.DiscoveryType.STRICT_DNS:

STRICT_DNS
  ⁣Refer to the :ref:`strict DNS discovery
  type<arch_overview_service_discovery_types_strict_dns>`
  for an explanation.
  
  
.. _envoy_api_enum_value_Cluster.DiscoveryType.LOGICAL_DNS:

LOGICAL_DNS
  ⁣Refer to the :ref:`logical DNS discovery
  type<arch_overview_service_discovery_types_logical_dns>`
  for an explanation.
  
  
.. _envoy_api_enum_value_Cluster.DiscoveryType.EDS:

EDS
  ⁣Refer to the :ref:`service discovery type<arch_overview_service_discovery_types_eds>`
  for an explanation.
  
  
.. _envoy_api_enum_value_Cluster.DiscoveryType.ORIGINAL_DST:

ORIGINAL_DST
  ⁣Refer to the :ref:`original destination discovery
  type<arch_overview_service_discovery_types_original_destination>`
  for an explanation.
  
  

.. _envoy_api_enum_Cluster.LbPolicy:

Enum Cluster.LbPolicy
---------------------

`[Cluster.LbPolicy proto] <https://github.com/envoyproxy/envoy/blob/v1.10.0/api/envoy/api/v2/cds.proto#L143>`_

Refer to :ref:`load balancer type <arch_overview_load_balancing_types>` architecture
overview section for information on each type.

.. _envoy_api_enum_value_Cluster.LbPolicy.ROUND_ROBIN:

ROUND_ROBIN
  *(DEFAULT)* ⁣Refer to the :ref:`round robin load balancing
  policy<arch_overview_load_balancing_types_round_robin>`
  for an explanation.
  
  
.. _envoy_api_enum_value_Cluster.LbPolicy.LEAST_REQUEST:

LEAST_REQUEST
  ⁣Refer to the :ref:`least request load balancing
  policy<arch_overview_load_balancing_types_least_request>`
  for an explanation.
  
  
.. _envoy_api_enum_value_Cluster.LbPolicy.RING_HASH:

RING_HASH
  ⁣Refer to the :ref:`ring hash load balancing
  policy<arch_overview_load_balancing_types_ring_hash>`
  for an explanation.
  
  
.. _envoy_api_enum_value_Cluster.LbPolicy.RANDOM:

RANDOM
  ⁣Refer to the :ref:`random load balancing
  policy<arch_overview_load_balancing_types_random>`
  for an explanation.
  
  
.. _envoy_api_enum_value_Cluster.LbPolicy.ORIGINAL_DST_LB:

ORIGINAL_DST_LB
  ⁣Refer to the :ref:`original destination load balancing
  policy<arch_overview_load_balancing_types_original_destination>`
  for an explanation.
  
  
.. _envoy_api_enum_value_Cluster.LbPolicy.MAGLEV:

MAGLEV
  ⁣Refer to the :ref:`Maglev load balancing policy<arch_overview_load_balancing_types_maglev>`
  for an explanation.
  
  

.. _envoy_api_enum_Cluster.DnsLookupFamily:

Enum Cluster.DnsLookupFamily
----------------------------

`[Cluster.DnsLookupFamily proto] <https://github.com/envoyproxy/envoy/blob/v1.10.0/api/envoy/api/v2/cds.proto#L285>`_

When V4_ONLY is selected, the DNS resolver will only perform a lookup for
addresses in the IPv4 family. If V6_ONLY is selected, the DNS resolver will
only perform a lookup for addresses in the IPv6 family. If AUTO is
specified, the DNS resolver will first perform a lookup for addresses in
the IPv6 family and fallback to a lookup for addresses in the IPv4 family.
For cluster types other than
:ref:`STRICT_DNS<envoy_api_enum_value_Cluster.DiscoveryType.STRICT_DNS>` and
:ref:`LOGICAL_DNS<envoy_api_enum_value_Cluster.DiscoveryType.LOGICAL_DNS>`,
this setting is
ignored.

.. _envoy_api_enum_value_Cluster.DnsLookupFamily.AUTO:

AUTO
  *(DEFAULT)* ⁣
  
.. _envoy_api_enum_value_Cluster.DnsLookupFamily.V4_ONLY:

V4_ONLY
  ⁣
  
.. _envoy_api_enum_value_Cluster.DnsLookupFamily.V6_ONLY:

V6_ONLY
  ⁣
  

.. _envoy_api_enum_Cluster.ClusterProtocolSelection:

Enum Cluster.ClusterProtocolSelection
-------------------------------------

`[Cluster.ClusterProtocolSelection proto] <https://github.com/envoyproxy/envoy/blob/v1.10.0/api/envoy/api/v2/cds.proto#L546>`_


.. _envoy_api_enum_value_Cluster.ClusterProtocolSelection.USE_CONFIGURED_PROTOCOL:

USE_CONFIGURED_PROTOCOL
  *(DEFAULT)* ⁣Cluster can only operate on one of the possible upstream protocols (HTTP1.1, HTTP2).
  If :ref:`http2_protocol_options <envoy_api_field_Cluster.http2_protocol_options>` are
  present, HTTP2 will be used, otherwise HTTP1.1 will be used.
  
  
.. _envoy_api_enum_value_Cluster.ClusterProtocolSelection.USE_DOWNSTREAM_PROTOCOL:

USE_DOWNSTREAM_PROTOCOL
  ⁣Use HTTP1.1 or HTTP2, depending on which one is used on the downstream connection.
  
  

.. _envoy_api_msg_UpstreamBindConfig:

UpstreamBindConfig
------------------

`[UpstreamBindConfig proto] <https://github.com/envoyproxy/envoy/blob/v1.10.0/api/envoy/api/v2/cds.proto#L587>`_

An extensible structure containing the address Envoy should bind to when
establishing upstream connections.

.. code-block:: json

  {
    "source_address": "{...}"
  }

.. _envoy_api_field_UpstreamBindConfig.source_address:

source_address
  (:ref:`core.Address <envoy_api_msg_core.Address>`) The address Envoy should bind to when establishing upstream connections.
  
  


.. _envoy_api_msg_UpstreamConnectionOptions:

UpstreamConnectionOptions
-------------------------

`[UpstreamConnectionOptions proto] <https://github.com/envoyproxy/envoy/blob/v1.10.0/api/envoy/api/v2/cds.proto#L592>`_


.. code-block:: json

  {
    "tcp_keepalive": "{...}"
  }

.. _envoy_api_field_UpstreamConnectionOptions.tcp_keepalive:

tcp_keepalive
  (:ref:`core.TcpKeepalive <envoy_api_msg_core.TcpKeepalive>`) If set then set SO_KEEPALIVE on the socket to enable TCP Keepalives.
  
  

